# kimchistop-latest

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: app.py  config.py  main.py
app/auth/: database.py  shemas.py
app/dto/: dto.py
app/exceptions/: sbis.py
app/models/: models.py  user.py
app/routers/: cart.py  food.py  payment.py  routers.py  sbis.py  user.py
app/services/: redis_service.py  sbis.py
